yolo just update

--- a/src/content/docs/en/aima-001.mdx
+++ b/src/content/docs/en/aima-001.mdx
@@ -25,6 +25,8 @@ export const components = {
 
 ## What is AI?
 
+*The field of artificial intelligence, or AI, Artificial intelligence is concerned with not just understanding but also building intelligent entities-machines that can compute how to act effectively and safely in a wide variety of novel situations.*
+
 
 AI is not just about understanding intelligence but also **building** intelligent entities.
 
