--- a/src/content/docs/en/aima-002.mdx
+++ b/src/content/docs/en/aima-002.mdx
@@ -22,3 +22,26 @@ export const components = {
     p: P
 }
 
+## Agents and Environments
+
+<Definition
+    term="Agent"
+    definition="An agent is anything that can be viewed as perceiving its environment through sensors and acting upon that environment through actuators."
+    source="Artificial Intelligent a Modern Approach - Chapter 2 section 1"
+    link=""
+/>
+
+**agent function** maps from any percept sequence to an action.
+
+Just keep in mind that the term **agent** is just a analytical tool.
+
+## Good Behaviour: The Concept of Rationality
+
+<Definition
+    term="rational agent"
+    definition="A rational agent is one that does the 'right thing'."
+    source="Artificial Intelligent a Modern Approach - Section 2.2"
+    link=""
+/>
+
+
