--- a/src/content/docs/en/dl-004.mdx
+++ b/src/content/docs/en/dl-004.mdx
@@ -60,6 +60,14 @@ export const components = {
     description="Basis functions."
 />
 
+### Likelihood Functions
+
+<Definition
+    term="Likelihood Function"
+    definition="Is the joint probability mass (or probability density) of observed data viewed as a function of the parameters of a statistical model."
+    source="Likelihood function - Wikipedia"
+    link="https://en.wikipedia.org/wiki/Likelihood_function"
+/>
 
 ## References
 
