--- a/src/content/docs/en/introduction.mdx
+++ b/src/content/docs/en/introduction.mdx
@@ -33,6 +33,10 @@ Ok, problem solved (really?). Clearly the decision to use MDX is just the tip of
 
 **In a nutshell**, this site is powered by [Astro](https://astro.build/) and some amazing integrations.
 
+:::hide
+this text is not visible
+:::
+
 ## Define Title
 
 To define a title use the `frontmatter` `title` to properly source it to the meta-data of the page:
