--- a/src/content/docs/en/ml-intro.mdx
+++ b/src/content/docs/en/ml-intro.mdx
@@ -32,6 +32,8 @@ Who do we measure learning?
 
 ## Probability Theory
 
+As Prof. Chris Bishop said: "I still think that students should learn the basic ideas of Bayesian inference [...]. You have to learn about probability, I don't think you can be a machine learning and not understand probability [...]". [Prof. Chris Bishop's NEW Deep Learning Textbook](https://youtu.be/kuvFoXzTK3E?t=751)
+
 Check my notes in [probability](/en/probability) for more details.
 
 Basic rules:
