--- a/src/content/docs/en/nn-intro.mdx
+++ b/src/content/docs/en/nn-intro.mdx
@@ -57,7 +57,7 @@ Human brain:
 - the energetic efficiency of the brain is approximately $10^{-16}$ joules (J)
 
 
-## Rosenblatt’s perceptron
+## Rosenblatt’s perceptron (the 1960s)
 
 <Important
     note="The perceptron is the simplest form of a neural network used for the classification of patterns said to be **linearly separable** (i.e., patterns that lie on opposite sides of a hyperplane)"
