--- a/src/content/docs/en/ros2-intro.mdx
+++ b/src/content/docs/en/ros2-intro.mdx
@@ -30,6 +30,10 @@ If you are wondering:
     note="Do I need to learn to ROS 1 to be able to learn ROS 2 (or vice versa), the answer is NO. (what? you expected a more elaborated answer?... I'm too lazy to write it down)"
 />
 
+<div class="flex justify-center mt-4">
+<blockquote class="twitter-tweet" data-conversation="none" data-theme="dark"><p lang="en" dir="ltr">More than half of all ROS users use ROS 2 and of those ROS 2 users most of them use the latest LTS release. <a href="https://t.co/jejuyDCbMq">pic.twitter.com/jejuyDCbMq</a></p>&mdash; Robot Operating System (ROS) (@rosorg) <a href="https://twitter.com/rosorg/status/1762921729171620048?ref_src=twsrc%5Etfw">February 28, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
+
 ## Prerequisites for Diving
 
 Knowledge required: 
@@ -46,14 +50,16 @@ Software requirements:
 ## Why do we need ROS nowadays?
 
 <Think
-    note="Imagine that it is around the year 2007, and that are many research laboratories in the area of robotics, each one of them with its own robots and each roboto with its own particularities. How can you share code between researchers without reinventing the wheel?"
+    note="Imagine that it is around the year 2007, and that are many research laboratories in the area of robotics, each one of them with its own robots and each robot with its own particularities. How can you share code between researchers without reinventing the wheel (minimize code rewrite)?"
 />
 
 If you think this is a trivial task to the point of "just share the code", I honestly wouldn't blame you for thinking that, but the reality is that is not a trivial task.
 
 I like to start with a mental exercise using a "toy example".
 
-The LiDAR sensor can cheap as the [RPLidar A1](https://www.slamtec.ai/product/slamtec-rplidar-a1/)~100 USD or expensive as the [Velodyne Puck](https://store.clearpathrobotics.com/products/puck) ~4,600 USD (there are more expensive LiDAR sensors), but apart from the price difference they have different communication interfaces. The RPLidar A1 uses an adapter from UART-to-USB and the Velodyne uses a Ethernet connection.
+The LiDAR sensor can be as cheap as the [RPLidar A1](https://www.slamtec.ai/product/slamtec-rplidar-a1/) ~100 USD or expensive as the [Velodyne Puck](https://store.clearpathrobotics.com/products/puck) ~4,600 USD (there are more expensive LiDAR sensors), but apart from the price difference they have different communication interfaces. The RPLidar A1 uses an adapter from UART-to-USB and the Velodyne uses a Ethernet connection.
+
+To motivate the example let's think about a **2D LiDAR** and the following pipeline:
 
 <Drawio
     file="ros.drawio"
@@ -131,6 +137,8 @@ If you are new to ROS you are probably a little frustrated trying to understand 
 
 The truth is there are many technical details that are not necessary to cover at this time with respect to the difference, but if you are curious here it is: [Changes between ROS 1 and ROS 2](https://design.ros2.org/articles/changes.html).
 
+Is correctly spelled with a space: `ROS 2` or `ROS 1`, check the [Trademark Rules And Guidelines 2022](https://www.ros.org/imgs/TrademarkRulesAndGuidelines2022.pdf) section "ROS in text".
+
 ## ROS Distributions 
 
 <Definition
@@ -150,7 +158,6 @@ Full list of ROS distributions:
 - [ROS 1 list of distributions](https://wiki.ros.org/Distributions)
 - [ROS 2 list of distributions](https://docs.ros.org/en/humble/Releases.html)
 
-Is correctly spelled with a space: `ROS 2` or `ROS 1`, check the [Trademark Rules And Guidelines 2022](https://www.ros.org/imgs/TrademarkRulesAndGuidelines2022.pdf) section "ROS in text".
 
 ## ROS Programming Languages
 
