--- a/src/content/docs/en/cpp-basics.mdx
+++ b/src/content/docs/en/cpp-basics.mdx
@@ -104,9 +104,9 @@ Topics:
     - by value
     - by reference
     - `const`
-    - default values
 - return values
 - functions overload
+    - default values
 - function templates
 
 [functions demo](https://github.com/harleylara/cpp-intro/blob/master/002-basics/functions.cpp)
@@ -127,8 +127,8 @@ More details on [Functions](https://cplusplus.com/doc/tutorial/functions2/).
 Topics:
 - Scopes
 - Namespaces
-- Namespaces aliasing
 - `using`
+- Namespaces aliasing
 - The std namespace
 - Storage classes
 
@@ -138,7 +138,13 @@ More on [Name visibility](https://cplusplus.com/doc/tutorial/namespaces/).
 
 Topics:
 - definition
+    - C++
+    - C-style
+    - with constructor
+    - with default values
 - nesting
+- anonymous
+- inheritance
 - struct pointers (in pointers section)
 
 [structs demo](https://github.com/harleylara/cpp-intro/blob/master/002-basics/structs.cpp)
@@ -177,14 +183,24 @@ Topics:
     - public vs. private
     - members initialization
     - getters and setters
+- class methods (also known as member functions)
 - constructor:
     - [initialization](https://en.cppreference.com/w/cpp/language/value_initialization)
     - overload
     - hidden
     - uniform initialization
-- class templates
+- overloading operators (not this time)
+- the keyword `this` (not this time)
+- static members (not this time)
+- const member functions (not this time)
+- class templates (not this time)
+- template specialization (not this time)
 
-More about classes in [Classes I](https://cplusplus.com/doc/tutorial/classes/)
+More about classes in [Classes I](https://cplusplus.com/doc/tutorial/classes/) and [Classes II](https://cplusplus.com/doc/tutorial/templates/)
+
+## Special Members
+
+(not this time)
 
 ## Inheritance
 
@@ -193,6 +209,8 @@ More about classes in [Classes I](https://cplusplus.com/doc/tutorial/classes/)
 <Important
     note="Don't be afraid."
 />
+
+*If you are interested in pointers you can ask the organizers for an extra half session of C++.*
 
 Topics:
 - declaring pointers
@@ -206,3 +224,19 @@ Topics:
 - void pointers
 - invalid pointers and null pointers
 - pointers to functions
+
+## Dynamic Memory
+
+(not this time)
+
+## Type Conversions
+
+(not this time)
+
+## Exceptions
+
+(not this time)
+
+## Preprocessor directives
+
+(not this time)
